# bakkutteh

./: Cargo.toml  README.md
.github/workflows/: build.yaml  ci.yaml
examples/: cronjob_configmap.yaml  cronjob_env.yaml  cronjob_resources.yaml  deployment.yaml
src/: main.rs
src/cli/: mod.rs  ui.rs
src/kube/: mod.rs  spec.rs
src/kube/template/: cronjob.rs  deployment.rs  mod.rs
