[package]
name = "bakkutteh"
version = "0.2.6"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.1", features = ["latest", "schemars"] }
schemars = { version = "1" }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.102"
serde_json = "1.0.149"
inquire = "0.9.4"
colored = "3"
serde_yml = "0.0.12"
