[package]
edition = "2024"
name = "bakkutteh"
version = "0.2.7"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3"
inquire = "0.9.4"
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
kube = { version = "3.1.0", features = ["runtime", "derive"] }
schemars = { version = "1" }
serde_json = "1.0.149"
serde_yml = "0.0.12"
spinners = "4.2.0"
tokio = { version = "1.50.0", features = ["full"] }
